Broken MPEG Audio decoding
See following thread: https://forum.videolan.org/viewtopic.php?f=35&t=119033
Same issue on desktop with --codec=avcodec Works fine with avplay.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
See #11743 (closed)
- Owner
Do we have libmad in VLC/Android?
Added attachment:
- Maintainer
The problem happens only when the demux is matroska and the codec is avcodec. (no problems with avformat/avcodec and matroska/mpeg_audio)
Libav reports that the header is missing: ff_mpa_check_header() fails from mpegaudiodec_template.c.
I think the problem come from vlc/modules/demuxer/mkv or libmatroska I don't know.
- Jean-Baptiste Kempf assigned to @typx
assigned to @typx
- Developer
This file broken. The frames coming from track 2 (MP3 audio) are not properly packetized.
The VLC
mpeg_audio
decoder is buffering data are looking for a proper MP3 frame boundary by itself. See http://git.videolan.org/?p=vlc.git;a=blob;f=modules/codec/mpeg_audio.c;h=936b1fa24d522eca6ef06c9e37f8976e1594177a;hb=HEAD#l231But the libavcodec MPEG audio decoder assumes the data are properly packetized and since the frames are never starting with
0xFFFE
the packets are just discarded.One solution could be to force a buffering packetizer when feeding MP3 to libavcodec.
- Jean-Baptiste Kempf changed milestone to %3.0.0
changed milestone to %3.0.0
commit 9d5d8ab5 Author: Steve Lhomme robUx4@videolabs.io Date: Wed Feb 25 16:01:08 2015 +0100
MKV: force packetization of MPEG audio frames Fixes [#11479](https://code.videolan.org/videolan/vlc/-/issues/11479) The file has some MP3 frames, but the frames are not packetized correctly in the Matroska file (spec violation) Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
Original author: robUx4@videolabs.io
- Migration Bot added Status::fixed label
added Status::fixed label
- Migration Bot closed
closed
- Owner
Milestone renamed
- Jean-Baptiste Kempf changed milestone to %3.0 FF
changed milestone to %3.0 FF
- Owner
Milestone renamed
- flx42 mentioned in issue #11743 (closed)
mentioned in issue #11743 (closed)