MKV: force packetization of MPEG audio frames

Fixes #11479
The file has some MP3 frames, but the frames are not packetized correctly in the Matroska file (spec violation)

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>